--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "^17.0.1",
 		"react-window": "^1.8.5",
 		"typeface-roboto": "^1.1.13",
+		"uuid": "^8.3.2",
 		"webextension-polyfill": "^0.7.0"
 	},
 	"devDependencies": {
