--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
 		"@emotion/styled": "^11.0.0",
 		"@material-ui/core": "^5.0.0-alpha.18",
 		"@material-ui/icons": "^5.0.0-alpha.23",
+		"@types/node": "^16.10.9",
+		"@types/react": "^17.0.30",
+		"@types/react-dom": "^17.0.9",
 		"bluebird": "^3.7.2",
 		"copy-to-clipboard": "^3.3.1",
 		"lodash": "^4.17.20",
@@ -31,10 +34,12 @@
 		"react-dom": "^17.0.1",
 		"react-window": "^1.8.5",
 		"typeface-roboto": "^1.1.13",
+		"typescript": "^4.4.4",
 		"uuid": "^8.3.2",
 		"webextension-polyfill": "^0.7.0"
 	},
 	"devDependencies": {
+		"@types/chrome": "^0.0.159",
 		"jimp": "^0.16.1",
 		"mocha": "^8.2.1",
 		"parcel": "^2.0.0-nightly.486",
