--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@types/node": "^16.10.9",
 		"@types/react": "^17.0.30",
 		"@types/react-dom": "^17.0.9",
+		"axios": "^0.23.0",
 		"bluebird": "^3.7.2",
 		"copy-to-clipboard": "^3.3.1",
 		"lodash": "^4.17.20",
