--- a/static/manifest.json
+++ b/static/manifest.json
@@ -22,7 +22,7 @@
 		"default_popup": "index.html"
 	},
 	"background": {
-		"scripts": [ "service-worker.js", "v2/background/background.js" ],
+		"scripts": [ "service-worker.js" ],
 		"persistent": true
 	},
 	"content_scripts": [
