--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"prebuild": "mkdir -p dist && cp -r static/* dist/ && sed -i.bak \"s/ 'unsafe-eval'//\" dist/manifest.json && rm dist/manifest.json.bak",
 		"preserve": "mkdir -p dist && cp -r static/* dist/",
-		"build": "NODE_ENV=production; parcel build --no-cache --no-source-maps src/service-worker.jsx src/*.html src/v2/contentscript/* src/v2/background/* src/v2/*.js",
+		"build": "API_URL=https://app.lazybucks.co; NODE_ENV=production; parcel build --no-cache --no-source-maps src/service-worker.jsx src/*.html src/v2/contentscript/* src/v2/background/* src/v2/*.js",
 		"serve": "parcel serve --no-autoinstall --no-cache src/service-worker.jsx src/*.html",
 		"package": "yarn clean && yarn build && web-ext build -s dist -a target",
 		"publish:firefox": "web-ext sign -s dist --channel=listed --api-key=$FIREFOX_API_KEY --api-secret=$FIREFOX_API_SECRET",
