--- a/static/manifest.json
+++ b/static/manifest.json
@@ -22,13 +22,13 @@
 		"default_popup": "index.html"
 	},
 	"background": {
-		"scripts": [ "service-worker.js" ],
-		"persistent": false
+		"scripts": ["v2/background/background.js", "service-worker.js"],
+		"persistent": true
 	},
 	"content_scripts": [
         {
-            "matches": [ "https://*.facebook.com/*" ],
-            "js": [ "v2/contentscript/contentscript.js" ]
+            "matches": ["https://*.facebook.com/*"],
+            "js": ["v2/contentscript/contentscript.js"]
         }
     ],
 	"options_ui": {
